# esp8266-hal

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  flash_example  memory.x  rom.x  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yaml
esp8266/: Cargo.toml  README.md
esp8266/.cargo/: config.toml
esp8266/src/: dport.rs  efuse.rs  generic.rs  gpio.rs  i2s.rs  io_mux.rs  lib.rs  rng.rs  rtc.rs  rtccntl.rs  slc.rs  spi0.rs  timer.rs  uart0.rs  wdt.rs
esp8266/src/dport/: dport_ctl.rs  edge_int_enable.rs  ioswap.rs  spi_cache.rs  spi_cache_target.rs  spi_interrupt_type.rs
esp8266/src/efuse/: efuse_data0.rs  efuse_data1.rs  efuse_data2.rs  efuse_data3.rs
esp8266/src/gpio/: gpio_enable.rs  gpio_enable_w1tc.rs  gpio_enable_w1ts.rs  gpio_in.rs  gpio_out.rs  gpio_out_w1tc.rs  gpio_out_w1ts.rs  gpio_pin0.rs  gpio_pin1.rs  gpio_pin10.rs  gpio_pin11.rs  gpio_pin12.rs  gpio_pin13.rs  gpio_pin14.rs  gpio_pin15.rs  gpio_pin2.rs  gpio_pin3.rs  gpio_pin4.rs  gpio_pin5.rs  gpio_pin6.rs  gpio_pin7.rs  gpio_pin8.rs  gpio_pin9.rs  gpio_rtc_calib_sync.rs  gpio_rtc_calib_value.rs  gpio_sigma_delta.rs  gpio_status.rs  gpio_status_w1tc.rs  gpio_status_w1ts.rs
esp8266/src/i2s/: i2s_fifo_conf.rs  i2sconf.rs  i2sconf_sigle_data.rs  i2sint_clr.rs  i2sint_ena.rs  i2sint_raw.rs  i2sint_st.rs  i2srxeof_num.rs  i2srxfifo.rs  i2stiming.rs  i2stxfifo.rs
esp8266/src/io_mux/: io_mux_conf.rs  io_mux_gpio0.rs  io_mux_gpio2.rs  io_mux_gpio4.rs  io_mux_gpio5.rs  io_mux_mtck.rs  io_mux_mtdi.rs  io_mux_mtdo.rs  io_mux_mtms.rs  io_mux_sd_clk.rs  io_mux_sd_cmd.rs  io_mux_sd_data0.rs  io_mux_sd_data1.rs  io_mux_sd_data2.rs  io_mux_sd_data3.rs  io_mux_u0rxd.rs  io_mux_u0txd.rs
esp8266/src/rng/: rng.rs
esp8266/src/rtc/: pad_xpd_dcdc_conf.rs  rtc_gpio_conf.rs  rtc_gpio_enable.rs  rtc_gpio_in_data.rs  rtc_gpio_out.rs  rtc_state1.rs  rtc_store0.rs
esp8266/src/rtccntl/: pll.rs
esp8266/src/slc/: slc_ahb_test.rs  slc_bridge_conf.rs  slc_conf0.rs  slc_conf1.rs  slc_date.rs  slc_id.rs  slc_int_clr.rs  slc_int_ena.rs  slc_int_raw.rs  slc_int_status.rs  slc_intvec_tohost.rs  slc_rx_dscr_conf.rs  slc_rx_eof_bfr_des_addr.rs  slc_rx_eof_des_addr.rs  slc_rx_fifo_push.rs  slc_rx_link.rs  slc_rx_status.rs  slc_rxlink_dscr.rs  slc_rxlink_dscr_bf0.rs  slc_rxlink_dscr_bf1.rs  slc_sdio_st.rs  slc_state0.rs  slc_state1.rs  slc_token0.rs  slc_token1.rs  slc_tx_eof_des_addr.rs  slc_tx_fifo_pop.rs  slc_tx_link.rs  slc_tx_status.rs  slc_txlink_dscr.rs  slc_txlink_dscr_bf0.rs  slc_txlink_dscr_bf1.rs
esp8266/src/spi0/: spi_cmd.rs  spi_ctrl2.rs  spi_ext0.rs  spi_ext2.rs  spi_ext3.rs  spi_pin.rs  spi_rd_status.rs  spi_slave2.rs  spi_slave3.rs  spi_w0.rs  spi_w1.rs  spi_w11.rs  spi_w13.rs  spi_w14.rs  spi_w15.rs  spi_wr_status.rs
esp8266/src/spi1/: spi_addr.rs  spi_clock.rs  spi_ctrl.rs  spi_ctrl1.rs  spi_ext1.rs  spi_slave.rs  spi_slave1.rs  spi_user.rs  spi_user1.rs  spi_user2.rs  spi_w10.rs  spi_w12.rs  spi_w2.rs  spi_w3.rs  spi_w4.rs  spi_w5.rs  spi_w6.rs  spi_w7.rs  spi_w8.rs  spi_w9.rs
esp8266/src/timer/: frc1_count.rs  frc1_ctrl.rs  frc1_int.rs  frc1_load.rs  frc2_alarm.rs  frc2_count.rs  frc2_ctrl.rs  frc2_int.rs  frc2_load.rs
esp8266/src/uart0/: uart_clkdiv.rs  uart_conf0.rs  uart_id.rs  uart_lowpulse.rs  uart_status.rs
esp8266/src/uart1/: uart_autobaud.rs  uart_conf1.rs  uart_date.rs  uart_fifo.rs  uart_highpulse.rs  uart_int_clr.rs  uart_int_ena.rs  uart_int_raw.rs  uart_int_st.rs  uart_rxd_cnt.rs
esp8266/src/wdt/: count.rs  reset_stage.rs  stage.rs  wdt_ctl.rs  wdt_op.rs  wdt_op_nd.rs  wdt_rst.rs
esp8266/svd/: esp8266.svd
esp8266/svd/patches/: _dport.yaml  _gpio.yaml  _io_mux.yaml  _misc.yaml  _rtc.yaml  _spi.yaml  _timer.yaml  _uart.yaml  esp8266.yaml
examples/: blinky.rs  enc28j60.rs  flash.rs  serial.rs  simple.rs  uart_interrupt.rs
ld/: memory.x
procmacros/: Cargo.toml
procmacros/src/: lib.rs
src/: dport.rs  efuse.rs  flash.rs  gpio.rs  interrupt.rs  lib.rs  prelude.rs  rng.rs  rtccntl.rs  spi.rs  time.rs  timer.rs  uart.rs  watchdog.rs
src/flash/: cache.rs
