[package]
name = "esp8266-hal"
version = "0.5.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An experimental hardware abstraction layer for the esp8266"
repository = "https://github.com/esp-rs/esp8266-hal"
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
esp8266 = "0.4"
nb = "1"
void = { version = "1", default-features = false }
xtensa-lx-rt = { version = "0.7", optional = true, features = ["lx106"] }
xtensa-lx = "0.4"
paste = { version = "1", optional = true }
esp8266-hal-proc-macros = { version = "=0.1", path = "procmacros" }

[features]
default = ["rt", "interrupt"]
rt = ["xtensa-lx-rt"]
# Place program completely in RAM (needed when e.g. using only ROM bootloader, or for debugging).
all_in_ram = []
interrupt = ["paste"]

[profile.dev]
debug = true

[dev-dependencies]
panic-halt = "0.2"
# smoltcp = { version = "0.7", default-features = false, features = ["ethernet", "proto-ipv4", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp"] }