[package]
name = "esp8266"
version = "0.7.0"
edition = "2021"
rust-version = "1.67"
description = "Peripheral access crate for the ESP8266"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded",
    "esp8266",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x",
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"
xtensa-lx = "0.8.0"

[features]
default = ["xtensa-lx/esp8266"]
rt = []
impl-register-debug = []
